# acolyte

./: .gitignore  CONTRIBUTING.md  INSTALL.md  LICENSE  MANIFEST.in  Makefile  README.md  STATUS.md  install-pip.bat  install-pip.sh  mypy.ini  prepare-for-github.sh  pyproject.toml  pyrightconfig.json  pytest.ini  requirements-dev.txt  requirements.txt  setup.py  test_pip_install.py
data/dreams/: .gitkeep
examples/: .acolyte.example  .acolyte.project.example  .acolyteignore.example
infra/: Dockerfile  Modelfile  docker-compose.yml
scripts/: README.md  copy_clean_acolyte.py  init_database.py  install-git-hooks.py  install.bat  install.sh  install_with_progress.py
scripts/dev/: README.md  dev.sh
scripts/git-hooks/: README.md  post-checkout  post-commit  post-fetch  post-merge
scripts/install/: README.md  init.py  install.py
scripts/install/common/: __init__.py  config_template.py  docker.py  hardware.py  port_manager.py  ui.py  validators.py
src/acolyte/: __init__.py  __main__.py  _version.py  cli.py
src/acolyte/api/: __init__.py  __init__.pyi  __main__.py  dream.py  dream.pyi  health.py  health.pyi  index.py  index.pyi  openai.py  openai.pyi
src/acolyte/api/websockets/: __init__.py  __init__.pyi  progress.py  progress.pyi
src/acolyte/core/: __init__.py  __init__.pyi  chunking_config.py  chunking_config.pyi  database.py  database.pyi  events.py  events.pyi  exceptions.py  exceptions.pyi  health.py  id_generator.py  id_generator.pyi  logging.py  logging.pyi  ollama.py  ollama.pyi  secure_config.py  secure_config.pyi  token_counter.py  token_counter.pyi  tracing.py  tracing.pyi
src/acolyte/core/database_schemas/: __init__.py  schemas.sql
src/acolyte/core/utils/: __init__.py  __init__.pyi  datetime_utils.py  datetime_utils.pyi  file_types.py  file_types.pyi  retry.py  retry.pyi
src/acolyte/dream/: __init__.py  __init__.pyi  analyzer.py  analyzer.pyi  fatigue_monitor.py  fatigue_monitor.pyi  insight_writer.py  insight_writer.pyi  orchestrator.py  orchestrator.pyi  state_manager.py  state_manager.pyi
src/acolyte/dream/prompts/: CUSTOM_PROMPTS_EXAMPLE.md  __init__.py  architecture_analysis.md  bug_detection.md  pattern_detection.md  performance_analysis.md  security_analysis.md
src/acolyte/embeddings/: __init__.py  __init__.pyi  cache.py  cache.pyi  context.py  context.pyi  metrics.py  metrics.pyi  persistent_cache.py  persistent_cache.pyi  reranker.py  reranker.pyi  types.py  types.pyi  unixcoder.py  unixcoder.pyi
src/acolyte/install/: __init__.py  database.py  database.pyi  init.py  init.pyi  installer.py  installer.pyi  post_install.py  resources_manager.py  resources_manager.pyi
src/acolyte/install/common/: __init__.py  config_template.py  docker.py  hardware.py  port_manager.py  ui.py  validators.py
src/acolyte/install/resources/: __init__.py
src/acolyte/models/: __init__.py  __init__.pyi  base.py  base.pyi  chat.py  chat.pyi  chunk.py  chunk.pyi  conversation.py  conversation.pyi  document.py  document.pyi  dream.py  dream.pyi  semantic_types.py  semantic_types.pyi  task_checkpoint.py  task_checkpoint.pyi  technical_decision.py  technical_decision.pyi
src/acolyte/models/common/: __init__.py  __init__.pyi  metadata.py  metadata.pyi
src/acolyte/rag/: __init__.py
src/acolyte/rag/chunking/: __init__.py  adaptive.py  adaptive.pyi  base.py  base.pyi  factory.py  (+7 more)
src/acolyte/semantic/: __init__.py  __init__.pyi  decision_detector.py  decision_detector.pyi  prompt_builder.py  prompt_builder.pyi  query_analyzer.py  query_analyzer.pyi  reference_resolver.py  reference_resolver.pyi  summarizer.py  summarizer.pyi  task_detector.py  task_detector.pyi  utils.py  utils.pyi
src/acolyte/services/: __init__.py  __init__.pyi  chat_service.py  chat_service.pyi  conversation_service.py  conversation_service.pyi  git_service.py  git_service.pyi  indexing_service.py  indexing_service.pyi  reindex_service.py  reindex_service.pyi  task_service.py  task_service.pyi
(+80 files in other folders)
